--- a/tests/djmax/styles.css
+++ b/tests/djmax/styles.css
@@ -3,4 +3,10 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: #0b0b0b;
+  color: white;
+}
+
+#gimme {
+  margin-bottom: 10px;
 }
