--- a/tests/djmax/styles.css
+++ b/tests/djmax/styles.css
@@ -7,6 +7,18 @@ body {
   color: white;
 }
 
-#gimme {
+#gimme,
+#options {
   margin-bottom: 10px;
+}
+
+fieldset {
+  text-align: left;
+}
+
+h1 {
+  margin-bottom: 0;
+}
+h2 {
+  margin-top: 0;
 }
