--- a/tests/djmax/styles.css
+++ b/tests/djmax/styles.css
@@ -5,11 +5,26 @@ body {
   text-align: center;
   background-color: #0b0b0b;
   color: white;
+  font-family: "Times New Roman";
 }
 
 #gimme,
 #options {
   margin-bottom: 10px;
+}
+
+#options {
+  display: flex;
+  flex-direction: row;
+}
+
+#merged-options {
+  display: flex;
+  flex-direction: column;
+}
+
+#merged-options > fieldset {
+  height: 100%;
 }
 
 fieldset {
@@ -20,5 +35,9 @@ h1 {
   margin-bottom: 0;
 }
 h2 {
-  margin-top: 0;
+  margin: 0;
+}
+
+p {
+  margin: 8px 0;
 }
