--- a/css/depfaces.css
+++ b/css/depfaces.css
@@ -195,6 +195,8 @@ article[who=harp][emotion=neutral]::before {
 /* heroes */
 
 article[who=chosenone]::before,
+article[who=chosen-one]::before,
+article[who=chosen_one]::before,
 article[who=hero][emotion=chosenone]::before {
   background-image: url("/images/faces/hero/ChosenOne.png");
 }
