--- a/css/experimental.css
+++ b/css/experimental.css
@@ -80,16 +80,16 @@ body article:last-of-type {
 
 article {
   position: relative;
-  border: 3px solid var(--c1);
+  border: 4px solid var(--c1);
   letter-spacing: 4.25px;
-  line-height: 23px;
+  line-height: 21px;
   background: black;
-  padding: 15px;
+  padding: 17px;
+  padding-left: 18.359px;
   color: var(--c1);
   height: fit-content;
   overflow: hidden;
   width: 100%;
-  flex-shrink: 0;
   max-width: 645px;
   min-width: 645px;
   min-height: 133px;
@@ -98,16 +98,17 @@ article {
 }
 
 article[who] {
-  padding-left: 130px;
+  padding-left: 131.26px;
 }
 
 article[who]::before {
   content: "";
   display: block;
-  float: left;
+  position: absolute;
   aspect-ratio: 1/1;
   height: 97px;
-  margin-left: -115px;
+  left: 15px;
+  top: 15px;
 }
 
 article::after {
