--- a/css/experimental.css
+++ b/css/experimental.css
@@ -36,6 +36,10 @@ body {
   --c2: #86c06c;
   --c3: #306850;
   --c4: #071821;
+  --c1v: 224 248 207;
+  --c2v: 134 192 108;
+  --c3v: 48 104 80;
+  --c4v: 7 24 33;
   --red: #ff0000;
 }
 
@@ -205,6 +209,49 @@ article.center {
   text-align: center;
 }
 
+article.picker {
+  min-width: 368px;
+  min-height: 0;
+  width: 368px;
+  margin-bottom: -5px;
+  padding: 15px;
+}
+
+span.highlight {
+  display: inline-block;
+  width: 100%;
+  padding-left: 20px;
+  background-clip: padding-box;
+  /* transition: background-color 0.1s; */
+}
+
+@media screen and (prefers-reduced-motion) {
+  span.highlight:hover,
+  span.highlight:active {
+    animation: none;
+  }
+}
+
+span.highlight:hover,
+span.highlight:active {
+  cursor: pointer;
+  background-color: var(--c2);
+  animation: alternate hl 0.4s linear infinite;
+}
+
+article.picker::after {
+  content: none;
+}
+
+@keyframes hl {
+  0% {
+    background-color: rgb(var(--c2v) / 0.3);
+  }
+  100% {
+    background-color: var(--c2);
+  }
+}
+
 article.buttons img {
   width: 88px;
   height: 31px;
@@ -212,11 +259,17 @@ article.buttons img {
 }
 
 @media only screen and (max-width: 645px) {
-  article {
+  article:not(.picker) {
     width: 100% !important;
     min-width: revert;
   }
   article.art {
     min-width: revert;
+  }
+}
+
+@media only screen and (max-width: 368px) {
+  article.picker {
+    width: 100%;
   }
 }
