div circle color overwrite stuff for ref sheet

--- a/css/experimental.css
+++ b/css/experimental.css
@@ -176,7 +176,7 @@ a:active {
 article.art {
   text-align: center;
 }
-article.art > img {
+article.art img {
   width: 100%;
   padding: 0;
   image-rendering: auto;
