--- a/css/experimental.css
+++ b/css/experimental.css
@@ -22,7 +22,7 @@ html,
 body {
   inset: 0;
   width: 100vw;
-  height: 100vh;
+  height: max-content;
   padding: 0;
   margin: 0;
   overflow: hidden auto;
@@ -53,7 +53,6 @@ body {
   gap: 5px;
   background: repeat var(--g3) url("/images/bg/background_yoki.png") center/960px;
   image-rendering: pixelated;
-  height: fit-content;
   min-height: 100vh;
 }
 
@@ -86,9 +85,9 @@ article {
   padding: 17px;
   padding-left: 18.359px;
   color: var(--g1);
-  height: fit-content;
   overflow: hidden;
   width: 100%;
+  height: auto;
   max-width: 645px;
   min-width: 645px;
   min-height: 133px;
@@ -165,6 +164,10 @@ article textarea {
   color: var(--r1);
 }
 
+article.important {
+  border-color: var(--r1);
+}
+
 
 a:link, a:visited {
   color: var(--g2);
@@ -208,7 +211,7 @@ article.center {
   align-self: center;
 }
 
-article .centertext {
+article.centertext {
   text-align: center;
 }
 
