--- a/css/experimental.css
+++ b/css/experimental.css
@@ -253,7 +253,8 @@ article .centertext {
 article.picker {
   min-width: 0;
   min-height: 0;
-  width: min-content;
+  width: fit-content;
+  max-width: 100%;
   margin-bottom: -5px;
   padding: 15px;
 }
